--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -63,5 +63,65 @@
 "startCamera": "Kamera starten",
 "useWebVersion": "Web-Version für Kamera verwenden",
 "webVersionRecommended": "Für QR-Code-Scanning nutze bitte die Web-Version unter mrribsorderapp.netlify.app",
-"scanResult": "Scan-Ergebnis"
+"scanResult": "Scan-Ergebnis",
+  "email": "E-Mail",
+  "emailRequired": "E-Mail *",
+  "emailHint": "ihre.email@beispiel.de",
+  "phoneNumber": "Telefonnummer",
+  "phoneNumberRequired": "Telefonnummer *",
+  "phoneHint": "1234567890",
+  "deliveryAddress": "Lieferadresse",
+  "street": "Straße",
+  "streetRequired": "Straße *",
+  "streetHint": "Musterstraße",
+  "houseNumber": "Nr.",
+  "houseNumberRequired": "Nr. *",
+  "houseNumberHint": "123",
+  "postalCode": "PLZ",
+  "postalCodeRequired": "PLZ *",
+  "postalCodeHint": "12345",
+  "city": "Stadt",
+  "cityRequired": "Stadt *",
+  "cityHint": "Berlin",
+  "deliveryNotes": "Lieferhinweise (optional)",
+  "additionalNotes": "Anmerkungen (optional)",
+  "notesHint": "z.B. Allergien, besondere Wünsche...",
+  "marketingConsent": "Ich möchte über Angebote und Neuigkeiten informiert werden",
+  "privacyNote": "Mit der Eingabe Ihrer Daten stimmen Sie unseren Datenschutzbestimmungen zu.",
+  "reservationDetails": "Reservierungsdetails",
+  "date": "Datum",
+  "dateRequired": "Datum *",
+  "selectDate": "Datum wählen",
+  "time": "Uhrzeit",
+  "timeRequired": "Uhrzeit *",
+  "selectTime": "Zeit wählen",
+  "numberOfGuests": "Personen",
+  "numberOfGuestsRequired": "Personen *",
+  "guest": "Person",
+  "guests": "Personen",
+  "specialRequests": "Besondere Wünsche (optional)",
+  "confirmationByEmail": "Bestätigung per E-Mail",
+  "pickupConfirmationByEmail": "Abholbestätigung per E-Mail",
+  "deliveryConfirmationByEmail": "Lieferbestätigung per E-Mail",
+  "reservationConfirmationByEmail": "Reservierungsbestätigung per E-Mail",
+  "delivery": "Lieferung",
+  "deliveryDescription": "Lieferung nach Hause",
+  "yourContactData": "Ihre Kontaktdaten für die Bestellung",
+  "yourContactAndDeliveryData": "Ihre Kontakt- und Lieferdaten",
+  "yourReservationData": "Ihre Kontaktdaten für die Reservierung",
+  "continueToOrder": "Weiter zur Bestellung",
+  "checkAddressAndContinue": "Lieferadresse prüfen & weiter",
+  "makeReservation": "Tisch reservieren",
+  "dataSaved": "Daten gespeichert - weiter zum Menü",
+  "addressConfirmed": "Lieferadresse bestätigt - weiter zum Menü",
+  "reservationSuccessful": "Reservierung erfolgreich! Bestätigung wurde per E-Mail versendet.",
+  "pleaseEnterEmail": "Bitte E-Mail-Adresse eingeben",
+  "pleaseEnterValidEmail": "Bitte gültige E-Mail-Adresse eingeben",
+  "pleaseEnterPhone": "Bitte Telefonnummer eingeben",
+  "phoneTooShort": "Telefonnummer zu kurz",
+  "pleaseEnterStreet": "Bitte Straße eingeben",
+  "number": "Nummer",
+  "invalid": "Ungültig",
+  "pleaseEnterCity": "Bitte Stadt eingeben",
+  "pleaseSelectDateTime": "Bitte Datum und Uhrzeit wählen"
 }
