--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -63,5 +63,65 @@
 "startCamera": "Start Camera",
 "useWebVersion": "Use Web Version for Camera",
 "webVersionRecommended": "For QR-Code scanning, please use the web version at mrribsorderapp.netlify.app",
-"scanResult": "Scan Result"
+"scanResult": "Scan Result",
+  "email": "Email",
+  "emailRequired": "Email *",
+  "emailHint": "your.email@example.com",
+  "phoneNumber": "Phone Number",
+  "phoneNumberRequired": "Phone Number *",
+  "phoneHint": "1234567890",
+  "deliveryAddress": "Delivery Address",
+  "street": "Street",
+  "streetRequired": "Street *",
+  "streetHint": "Example Street",
+  "houseNumber": "No.",
+  "houseNumberRequired": "No. *",
+  "houseNumberHint": "123",
+  "postalCode": "Postal Code",
+  "postalCodeRequired": "Postal Code *",
+  "postalCodeHint": "12345",
+  "city": "City",
+  "cityRequired": "City *",
+  "cityHint": "Berlin",
+  "deliveryNotes": "Delivery Notes (optional)",
+  "additionalNotes": "Additional Notes (optional)",
+  "notesHint": "e.g. allergies, special requests...",
+  "marketingConsent": "I would like to receive offers and news",
+  "privacyNote": "By entering your data, you agree to our privacy policy.",
+  "reservationDetails": "Reservation Details",
+  "date": "Date",
+  "dateRequired": "Date *",
+  "selectDate": "Select Date",
+  "time": "Time",
+  "timeRequired": "Time *",
+  "selectTime": "Select Time",
+  "numberOfGuests": "Guests",
+  "numberOfGuestsRequired": "Guests *",
+  "guest": "Guest",
+  "guests": "Guests",
+  "specialRequests": "Special Requests (optional)",
+  "confirmationByEmail": "Confirmation by email",
+  "pickupConfirmationByEmail": "Pickup confirmation by email",
+  "deliveryConfirmationByEmail": "Delivery confirmation by email",
+  "reservationConfirmationByEmail": "Reservation confirmation by email",
+  "delivery": "Delivery",
+  "deliveryDescription": "Home delivery",
+  "yourContactData": "Your contact information for the order",
+  "yourContactAndDeliveryData": "Your contact and delivery information",
+  "yourReservationData": "Your contact information for the reservation",
+  "continueToOrder": "Continue to order",
+  "checkAddressAndContinue": "Check address & continue",
+  "makeReservation": "Make reservation",
+  "dataSaved": "Data saved - continue to menu",
+  "addressConfirmed": "Delivery address confirmed - continue to menu",
+  "reservationSuccessful": "Reservation successful! Confirmation sent by email.",
+  "pleaseEnterEmail": "Please enter email address",
+  "pleaseEnterValidEmail": "Please enter valid email address",
+  "pleaseEnterPhone": "Please enter phone number",
+  "phoneTooShort": "Phone number too short",
+  "pleaseEnterStreet": "Please enter street",
+  "number": "Number",
+  "invalid": "Invalid",
+  "pleaseEnterCity": "Please enter city",
+  "pleaseSelectDateTime": "Please select date and time"
 }
